--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,7 +7,7 @@
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img class="d-block w-100" height="500px" src="/assets/1.jpg" alt="First slide">
+        <img class="d-block w-100" height="500px" src="assets/1.jpg" alt="First slide">
       </div>
       <div class="carousel-item">
         <img class="d-block w-100"  height="500px"src="assets/2.jpg" alt="Second slide">
